<!--
Copyright 2015 IBM Corp.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sample.tagnotificationsandroid.MainActivity" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:shrinkColumns="*"
                android:stretchColumns="*" >

                <Button
            		android:id="@+id/btnIsPushSupported"
            		android:layout_width="0dp"
            		android:layout_height="wrap_content"
            		android:textSize="16sp"
            	    android:layout_weight="1"
            		android:text="@string/btnIsPushSupported"
            		style="" />
        
        		<Button
            		android:id="@+id/btnSubscribedTags"
            		android:layout_width="0dp"
            		android:layout_height="wrap_content"
            		android:textSize="16sp"
            		android:layout_weight="1"
            		android:text="@string/btnSubscribedTags"
        			style="" />
            
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:shrinkColumns="*"
                android:stretchColumns="*" >

                <Button
                    android:id="@+id/btnSubscribeTag1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnSubscribeTag1"
                    android:enabled="false"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnSubscribeTag2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnSubscribeTag2"
                    android:enabled="false"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnUnsubscribeTag1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnUnsubscribeTag1"
                    android:enabled="false"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnUnsubscribeTag2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnUnsubscribeTag2"
                    android:enabled="false"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>